Fix column spacing.
git-svn-id: https://www.kiberpipa.org/svn/intranet/rd666@1439 ddb1d346-470b-0410-b242-bdb7c8b48ed5

--- a/media/www/css/style.css
+++ b/media/www/css/style.css
@@ -307,9 +307,9 @@ a img {
 
 #blog-cp {
 	float: left;
-	width: 480px;
+	width: 475px;
 	height: 100%;
-	padding-bottom: 25px;
+	padding: 0 5px 25px 0;
 	}
 	
 .blog-cp-title {
